--- a/MyApplication10/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication10/app/src/main/res/layout/activity_home.xml
@@ -58,24 +58,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="8dp"
-        android:text="Meus Cursos" />
-
-    <Button
-        android:id="@+id/btnNovidades"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="8dp"
-        android:layout_toRightOf="@id/btnMinhasMaterias"
-        android:text="Novidades" />
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="5dp"
+        android:text="Minhas Matérias" />
 
     <Button
         android:id="@+id/btnConfigs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@id/btnNovidades"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="5dp"
         android:text="Configurações" />
 
 </RelativeLayout>
